[metadata]
name = pyproj
description = Python interface to PROJ (cartographic projections and coordinate transformations library)
long_description = file: README.md
long_description_content_type = text/markdown
author = Jeff Whitaker
author_email = jeffrey.s.whitaker@noaa.gov
license = MIT
license_file = LICENSE
platform = any
keywords = GIS, map, geospatial, coordinate-systems, coordinate-transformation, cartographic-projection, geodesic
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/pyproj4/pyproj
download_url = http://python.org/pypi/pyproj
project_urls =
    Documentation = https://pyproj4.github.io/pyproj/
    Release Notes = https://pyproj4.github.io/pyproj/stable/history.html
    Bug Tracker = https://github.com/pyproj4/pyproj/issues
    Source Code = https://github.com/pyproj4/pyproj

[options]
zip_safe = False # https://mypy.readthedocs.io/en/stable/installed_packages.html
packages = pyproj,pyproj.crs
python_requires = >=3.7
install_requires =
    certifi

[options.entry_points]
console_scripts =
    pyproj = pyproj.__main__:main

[flake8]
max-line-length = 88
ignore =
    C408 # Unnecessary dict/list/tuple call - rewrite as a literal
    E203 # whitespace before ':' - doesn't work well with black
    E225 # missing whitespace around operator - let black worry about that
    W503 # line break occurred before a binary operator - let black worry about that
